tests/models/enum/unnamed/u128/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        u128
    ),
}
fn main() {}
